--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+# dist  # Komentari atau hapus baris ini untuk menyertakan folder dist
 dist-ssr
 *.local
 
